fixed align

--- a/style-auth.css
+++ b/style-auth.css
@@ -134,8 +134,8 @@
 	box-sizing: border-box;
 	background-color: var(--mb-login-button-color);
 	background-image: linear-gradient(90deg, transparent 40px, var(--mb-input-color) 40px);
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 	position: relative;
 	width: 100%;
 	height: var(--mb-dialog-button-height);
@@ -155,7 +155,7 @@
 .input-wrapper i {
 	position: absolute;
 	left: 20px;
-	top: 20px;
+	top: 50%;
 	transform: translate(-50%, -50%);
 	color: var(--mb-glyph-color);
 
